apps/staging/tandoor/deployment-postgres-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tandoor
spec:
  template:
    spec:
      containers:
        - name: tandoor
          image: ghcr.io/tandoorrecipes/recipes:2.6.15
          resources:
            requests:
              cpu: 25m
